<resources>

    <!--**************************** activity_main.xml *****************************-->
    <string name="app_name">Neurofeedback</string>
    <string name="concept">for a strong spirit...</string>

    <!--**************************** exp_setting.xml *****************************-->
    <string name="expSetting">実験条件設定</string>
    <string name="description">以下の項目にご記入の上、「次へ」のボタンを押してください。</string>

    <string name="restTime">Restの時間</string>
    <string-array name="selectRestTime">
        <item>0</item>
        <item>10</item>
        <item>15</item>
        <item>20</item>
        <item>25</item>
        <item>30</item>
    </string-array>

    <string name="baselineTime">Baseline定義時間</string>
    <string-array name="selectBaselineTime">
        <item>0</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>

    <string name="movingAvgTime">移動平均の時間幅</string>
    <string-array name="selectMovingAvgTime">
        <item>0</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>

    <string name="trainingTime">NFトレーニング時間</string>
    <string-array name="selectTrainingTime">
        <item>0</item>
        <item>30</item>
        <item>60</item>
        <item>90</item>
        <item>120</item>
        <item>150</item>
        <item>180</item>
        <item>210</item>
        <item>240</item>
        <item>270</item>
        <item>300</item>
    </string-array>

    <string name="prepareDevice">デバイス準備</string>
    <string name="settingStart">セッティング開始</string>

    <string name="currentState">Current</string>
    <string name="currentStateValue">待機中</string>
    <string name="leftBrain">Left</string>
    <string name="leftBrainValue">0</string>
    <string name="leftBrainValueUnit">mMmm</string>
    <string name="leftMotionArtifact">###</string>
    <string name="rightBrain">Right</string>
    <string name="rightBrainValue">0</string>
    <string name="rightBrainValueUnit">mMmm</string>
    <string name="rightMotionArtifact">###</string>
    <string name="liBrain">LI</string>
    <string name="liBrainValue">0</string>
    <string name="trial">Trial</string>
    <string name="trialValue">0</string>

    <string name="measureStart">開始</string>
    <string name="measureStop">停止</string>

    <string name="nextButton">次へ</string>

    <string name="startMeasure">Start</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="li">LI</string>
    <string name="real">Real</string>
    <string name="sham">Sham</string>
    <string name="startNFTraining1">Start NF Training 1</string>
    <string name="startNFTraining2">Start NF Training 2</string>
    <string name="startShamTraining1">Start Sham Training 1</string>
    <string name="startShamTraining2">Start Sham Training 2</string>

    <string name="appStart">Start Demo Mode</string>

    <string name="discover">装置検索</string>
    <string name="connect">装置接続</string>
    <string name="gain">ゲイン調整</string>
    <string name="start">計測開始</string>

    <string name="discoveredID1">検索状態・・・</string>
    <string name="discoveredID2">############</string>
    <string name="connectingState1">接続状態・・・</string>
    <string name="connectingState2">############</string>
    <string name="gainValue1">ゲイン調整・・・</string>
    <string name="gainValue2">############</string>
    <string name="frequency1">周波数・・・</string>
    <string name="frequency2">440Hz</string>

</resources>
