<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Space
        android:layout_width="match_parent"
        android:layout_height="20sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/give_you_glory"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textSize="60sp"
        android:textStyle="bold"/>

    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/chart"
        android:layout_width="match_parent"
        android:layout_height="250dp"/>

    <Button
        android:id="@+id/startMeasure"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/startMeasure"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:orientation="horizontal">

            <Space
                android:layout_width="20sp"
                android:layout_height="wrap_content"/>

            <Button
                android:id="@+id/left_brain"
                android:layout_width="60sp"
                android:layout_height="wrap_content"
                android:text="@string/left"
                android:textSize="10sp"
                android:textStyle="bold"/>

            <Button
                android:id="@+id/right_brain"
                android:layout_width="60sp"
                android:layout_height="wrap_content"
                android:text="@string/right"
                android:textSize="10sp"
                android:textStyle="bold"/>

            <Button
                android:id="@+id/li_brain"
                android:layout_width="60sp"
                android:layout_height="wrap_content"
                android:text="@string/li"
                android:textSize="10sp"
                android:textStyle="bold"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:orientation="horizontal">

            <Button
                android:layout_width="60sp"
                android:layout_height="wrap_content"
                android:text="@string/real"
                android:textSize="10sp"
                android:textStyle="bold"/>

            <Button
                android:layout_width="60sp"
                android:layout_height="wrap_content"
                android:text="@string/sham"
                android:textSize="10sp"
                android:textStyle="bold"/>

            <Space
                android:layout_width="20sp"
                android:layout_height="wrap_content"/>

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/startNFTraining1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/startNFTraining1"/>

    <Button
        android:id="@+id/startNFTraining2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/startNFTraining2"/>

    <Button
        android:id="@+id/startShamTraining1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/startShamTraining1"/>

    <Button
        android:id="@+id/startShamTraining2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/startShamTraining2"/>

</LinearLayout>