<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Space
        android:layout_width="match_parent"
        android:layout_height="60sp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right">

        <ImageView
            android:id="@+id/batteryImage"
            android:layout_width="30dp"
            android:layout_height="40dp"
            android:src="@drawable/b75"/>

    </LinearLayout>

    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/chart"
        android:layout_width="match_parent"
        android:layout_height="300sp"/>


    <!-- ################### 左脳血流変化表示 ################### -->
    <LinearLayout
        android:layout_width="200sp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="50sp"
            android:layout_height="wrap_content"
            android:text="@string/leftBrain"
            android:textAlignment="center"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/leftBrainValue"
            android:layout_width="50sp"
            android:layout_height="wrap_content"
            android:text="@string/leftBrainValue"
            android:textAlignment="center"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="50sp"
            android:layout_height="wrap_content"
            android:text="@string/leftBrainValueUnit"
            android:textAlignment="center"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/leftMotionArtifact"
            android:layout_width="50sp"
            android:layout_height="wrap_content"
            android:text="@string/leftMotionArtifact"
            android:textAlignment="center"
            android:textStyle="bold"/>

    </LinearLayout>

    <!-- ################### 右脳血流変化表示 ################### -->
    <LinearLayout
        android:layout_width="200sp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="50sp"
            android:layout_height="wrap_content"
            android:text="@string/rightBrain"
            android:textAlignment="center"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/rightBrainValue"
            android:layout_width="50sp"
            android:layout_height="wrap_content"
            android:text="@string/rightBrainValue"
            android:textAlignment="center"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="50sp"
            android:layout_height="wrap_content"
            android:text="@string/rightBrainValueUnit"
            android:textAlignment="center"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/rightMotionArtifact"
            android:layout_width="50sp"
            android:layout_height="wrap_content"
            android:text="@string/rightMotionArtifact"
            android:textAlignment="center"
            android:textStyle="bold"/>

    </LinearLayout>

    <!-- ################### LI値表示 ################### -->
    <LinearLayout
        android:layout_width="100sp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="50sp"
            android:layout_height="wrap_content"
            android:text="@string/liBrain"
            android:textAlignment="center"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/liBrainValue"
            android:layout_width="50sp"
            android:layout_height="wrap_content"
            android:text="@string/liBrainValue"
            android:textAlignment="center"
            android:textStyle="bold"/>

    </LinearLayout>

    <!-- ###################### Trial数表示 ##################### -->
    <LinearLayout
        android:layout_width="100sp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="50sp"
            android:layout_height="wrap_content"
            android:text="@string/trial"
            android:textAlignment="center"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/trialValue"
            android:layout_width="50sp"
            android:layout_height="wrap_content"
            android:text="@string/trialValue"
            android:textAlignment="center"
            android:textStyle="bold"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:orientation="horizontal">

            <Space
                android:layout_width="50sp"
                android:layout_height="wrap_content"/>

            <Button
                android:id="@+id/measureStart"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:text="@string/measureStart"
                android:background="@drawable/circle_button_1"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:orientation="horizontal">

            <Button
                android:id="@+id/measureStop"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:text="@string/measureStop"
                android:background="@drawable/circle_button_2"/>

            <Space
                android:layout_width="50sp"
                android:layout_height="wrap_content"/>

        </LinearLayout>

    </LinearLayout>


</LinearLayout>